--- a/Курсовая- раскрашивание карты.vcxproj
+++ b/Курсовая- раскрашивание карты.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="bmp.c" />
     <ClCompile Include="colorr.c" />
     <ClCompile Include="graph.c" />
+    <ClCompile Include="log.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="region.c" />
   </ItemGroup>
@@ -137,6 +138,7 @@
     <ClInclude Include="bmp.h" />
     <ClInclude Include="colorr.h" />
     <ClInclude Include="graph.h" />
+    <ClInclude Include="log.h" />
     <ClInclude Include="region.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
