--- a/Курсовая- раскрашивание карты.vcxproj.filters
+++ b/Курсовая- раскрашивание карты.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="colorr.c">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="log.c">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bmp.h">
@@ -42,6 +45,9 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
     <ClInclude Include="colorr.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="log.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
